Update config.yml for diaque

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ welcome_message: Inspired By Code
 description: FullStack Engineer - Game Engineer
 creator: <a href="http://onev.cat">@onevcat</a>
 
-url: "http://vno.onevcat.com"
+url: "http://hitoo.co"
 
 permalink: /:year/:month/:title/
 
