fix: update side title. Remove unsued file

--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,8 @@
 title: Too
 subtitle: Cyberjaya, Malaysia
 welcome_message: Inspired By Code
-description: FullStack Engineer - Game Engineer - Data Scientist
-creator: <a href="http://onev.cat">@onevcat</a>
-
+description: FullStack Developer - Deep Learning - Indie Game
+creator:
 url: "http://hitoo.co"
 
 permalink: /:year/:month/:title/
